minus margin fix for 'row' on mobile phone

--- a/src/sass/_card.scss
+++ b/src/sass/_card.scss
@@ -117,7 +117,7 @@ mat-card.branded-deal-card {
 .box {
   display: block;
   padding: 0 0 0.5rem 0;
-  margin: 0.5rem 0.5rem 2rem;
+  margin: 0 0.5rem 2.5rem;
   border: 1px solid #ececec;
   background: #fff;
   // FIXME: box-shadow.
