--- a/src/sass/_html.scss
+++ b/src/sass/_html.scss
@@ -9,3 +9,7 @@ footer,
   font-size: 12px;
   float: right;
 }
+
+.no-margin {
+  margin: 0 !important;
+}
